[package]

	name = "btrfs"
	description = "Interface for BTRFS ioctls etc"
	license = "MIT"

	version = "1.2.2"

	authors = [
		"James Pharaoh <james@wellbehavedsoftware.com>",
	]

	include = [
		"src/**/*.rs",
		"Cargo.toml",
		"README.md",
	]

[dependencies]

	crc = "1.4"
	flate2 = "0.2"
	lazy_static = "0.2"
	libc = "0.2"
	minilzo = "0.1"
	nix = "*"
	uuid = "0.3"

# noet ts=4 filetype=toml
