[package]

	name = "btrfs"
	description = "Interface for BTRFS ioctls etc"
	license = "MIT"

	version = "1.2.2"

	authors = [
		"James Pharaoh <james@wellbehavedsoftware.com>",
	]

	include = [
		"src/**/*.rs",
		"Cargo.toml",
		"README.md",
	]

[dependencies]

	chrono = "0.4"
	crc = "1.4"
	flate2 = "0.2"
	itertools = "0.6"
	lazy_static = "0.2"
	libc = "0.2"
	memmap = "0.5"
	minilzo = "0.2"
	nix = "0.8"
	output = "0.6"
	uuid = "0.5"

[replace]

	"output:0.6.2" = { path = "../rust-output" }

# noet ts=4 filetype=toml
